<resources>
    <string name="app_name">Earthquake</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_earthquake_maps">EarthquakeMapsActivity</string>
    <string name="last_earthquakes">Last Earthquakes</string>
    <string name="risk_map">Risk Map</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="high_mag">High Mag</string>
    <string name="low_mag">Low Mag</string>
    <string name="last_mag">Last Mag</string>
</resources>